# group5

./: .gitignore  CMakeLists.txt  README.md
Game/src/: ClientGame.cpp  NetworkData.h  ServerGame.cpp
client/: CMakeLists.txt  main.cpp  main.h
client/audios/four_seasons/: COPYRIGHT
client/client/: CMakeLists.txt  client.cpp  client.h
client/client_src/: CMakeLists.txt  ClientNetwork.cpp  ClientNetwork.h
client/include/: Client.h  ClientGame.h  ClientNetwork.h
client/include/sge/: FontLoader.h  GraphicsConstants.h  GraphicsEntity.h  GraphicsGeometry.h  GraphicsShaders.h  ShittyGraphicsEngine.h  UIEntity.h  prefix.h
client/include/sound/: SoundManager.h
client/include/ui/: UIManager.h  imgui.h  imgui_internal.h
client/models/: bear_centered.glb  bear_walk_2.glb  egg.mtl  fox.glb  map_1_test.mtl
client/models/characters/: bear-dance.glb  bear.glb  fox-dance.glb  fox.glb  penguin-dance.glb  penguin.glb  rabbit-dance.glb  rabbit.glb
client/models/map/: map.mtl  map_new.mtl  water.mtl
client/models/map_2_test/: map_2_test.mtl
client/models/map_3/: map_3.mtl
client/shaders/: animated.vert.glsl  billboard.frag.glsl  billboard.vert.glsl  blinnphong.frag.glsl  bulletTrail.frag.glsl  bulletTrail.vert.glsl  crosshair.frag.glsl  crosshair.vert.glsl  nop.frag.glsl  outline.geom.glsl  particles.frag.glsl  particles.geom.glsl  particles.vert.glsl  screen.frag.glsl  screen.vert.glsl  screenUI_noTexture.vert.glsl  shadow.vert.glsl  skybox.frag.glsl  skybox.vert.glsl  static.frag.glsl  static.vert.glsl  toon.frag.glsl  ui.frag.glsl  ui.vert.glsl
client/src/: CMakeLists.txt  Client.cpp  ClientGame.cpp  ClientGame.h  ClientNetwork.cpp  ClientNetwork.h  client.cpp  client.h
client/src/sge/: FontLoader.cpp  GraphicsEntity.cpp  GraphicsGeometry.cpp  GraphicsShaders.cpp  ShittyGraphicsEngine.cpp  UIEntity.cpp
client/src/sound/: SoundManager.cpp
client/src/ui/: UIManager.cpp  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
common/: CMakeLists.txt  GameConstants.h  NetworkData.h  NetworkServices.cpp  NetworkServices.h  SetupParser.cpp  SetupParser.h  ShittyUtils.h  setup.json
lib/assimp/: CMakeLists.txt
lib/glew/: glew.pc  glew.pc.in
lib/glfw/: CMakeLists.txt
lib/glm/: CMakeLists.txt
server/: CMakeLists.txt
server/include/: Server.h  ServerGame.h  ServerNetwork.h
server/include/bge/: Component.h  ComponentManager.h  Entity.h  Event.h  EventHandler.h  Handler.h  System.h  World.h
server/server/: CMakeLists.txt  server.cpp  server.h
server/server_src/: CMakeLists.txt  server.cpp
server/src/: CMakeLists.txt  Server.cpp  ServerGame.cpp  ServerGame.h  ServerNetwork.cpp  ServerNetwork.h  server.cpp
server/src/bge/: ComponentManager.cpp  EventHandler.cpp  System.cpp  World.cpp
